# hoss-cookiecutter-templates

./: ReadMe.md
django/: cookiecutter.json
django/hooks/: post_gen_project.sh
django/{{cookiecutter.project_name}}/: .envrc  pyproject.toml  shell.nix
java/: cookiecutter.json
java/{{cookiecutter.projectname}}/: .envrc  .gitignore  docker-compose.yml  shell.nix
nodejs/: cookiecutter.json
nodejs/{{cookiecutter.projectname}}/: .envrc  shell.nix
poetry/: cookiecutter.json
poetry/{{cookiecutter.project_name}}/: pyproject.toml
python-play/: cookiecutter.json
python-play/hooks/: post_gen_project.sh
python-play/{{cookiecutter.project_name}}/: .envrc  shell.nix
