[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Mike Hostetler <mike@squarepegsystems.com>"]
readme = "README.md"

## are these the new standard?
[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.1"
django-debug-toolbar = "^4.1.0"
psycopg2-binary = "^2.9.6"
django-extensions = "^3.2.1"
ipython = "^8.13.2"

[tool.poetry.dev-dependencies]
ipython = "^8.7.0"
pytest = "^7.2.0"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
